# PANFinder

./: Cargo.toml  LICENSE  PANFinder.toml  README.md  clippy.toml
.github/workflows/: rust.yml
src/: main.rs
src/pan_finder/: analyser.rs  config.rs  lister.rs  mod.rs  output.rs  utils.rs
src/pan_finder/analyser/: analyser_api.rs  bz2_analyser.rs  common.rs  gz_analyser.rs  mod.rs  pdf_analyser.rs  tar_analyser.rs  text_analyser.rs  zip_analyser.rs
src/pan_finder/output/: mod.rs  output_api.rs  output_code_climate.rs  output_console.rs  output_excel.rs  output_text.rs
testdata/: docx_file_not_present.docx  docx_file_present.docx  odf_file_present.ods  odt_file_not_present.odt  odt_file_present.odt  pdf_not_present.bz2  pdf_not_present.typ  pdf_present.bz2  pdf_present.typ  tar_not_present.tar  tar_not_present.tar.bz2  tar_not_present.tgz  tar_present.tar  tar_present.tar.bz2  tar_present.tgz  tar_with_dir.tar  tar_with_dir.tgz  text_not_present.bz2  text_not_present.txt  text_present  text_present.bz2  text_present.txt  xlsx_file_present.xlsx
testdata/lister/: tar_file.tar
testdata/source/: pdf_not_present.typ  pdf_present.typ
