[package]
name = "PANFinder"
description = "Search for PAN in files"
version = "0.2.0"
edition = "2024"
authors = ["Grégory Lerbret"]
license = "MIT"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
hex = "0.4.3"
hmac-sha512 = "1.1"
indicatif = "0.18.4"
luhn = "1.0"
pdf_oxide = "0.3.38"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
walkdir = "2"
