[package]
name = "PANFinder"
description = "Search for PAN in files"
version = "0.3.0"
edition = "2024"
authors = ["Grégory Lerbret"]
license = "MIT"
repository = "https://github.com/glerbret/PANFinder"
categories = ["command-line-utilities", "security"]
keywords = ["payment card", "PCI DSS"]

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
hex = "0.4.3"
hmac-sha512 = "1.1"
indicatif = "0.18.4"
luhn = "1.0"
pdf_oxide = "0.3.40"
regex = "1.12"
rust_xlsxwriter = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.45"
toml = "1.1"
walkdir = "2.5"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery	= { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
single_call_fn = "allow"
